<resources>
    <string name="app_name">Artbook Testing</string>
    <string name="add_art_fragment">Add Art</string>
    <string name="art_list_api_fragment">Art List From Api</string>
    <string name="art_details_fragment">Art Details</string>
    <string name="preview_fragment">Preview</string>
    <string name="fab_button">add art Image</string>
    <string name="art_image">Art Image</string>
    <string name="search_image">Search Image</string>
    <string name="art_name">Art Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="art_year">Enter art year</string>
    <string name="save_image">Save Image</string>
    <string name="send_art_other_fragment">Send Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="start_activity_logo">Start Activity logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="navigation_header_logo">Navigation Header Logo</string>
    <string name="navigation_drawer_left">Navigation Drawer Left</string>
    <string name="navigation_drawer_right">Navigation Drawer Right</string>
</resources>