<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.artDetail.ArtDetailsFragment">

        <ImageView
            android:id="@+id/image_view_art"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_add_photo"
            android:contentDescription="@string/art_image" />

        <EditText
            android:id="@+id/edit_text_art_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_10margin"
            android:fontFamily="@font/roboto_italic"
            android:hint="@string/art_name"
            app:layout_constraintEnd_toEndOf="@id/image_view_art"
            app:layout_constraintStart_toStartOf="@id/image_view_art"
            app:layout_constraintTop_toBottomOf="@+id/image_view_art"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/artist_name"
            android:fontFamily="@font/roboto_italic"
            android:layout_margin="@dimen/edit_text_10margin"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_art_name"
            app:layout_constraintEnd_toEndOf="@id/image_view_art"
            app:layout_constraintStart_toStartOf="@id/image_view_art"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_art_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_italic"
            android:hint="@string/art_year"
            android:layout_margin="@dimen/edit_text_10margin"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_artist_name"
            app:layout_constraintEnd_toEndOf="@id/image_view_art"
            app:layout_constraintStart_toStartOf="@id/image_view_art"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/edit_text_art_year"
            android:layout_margin="@dimen/edit_text_10margin"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_art_year"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_art_year"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/save_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>